--- a/index.html
+++ b/index.html
@@ -3,134 +3,78 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Form and Table Example</title>
+<title>Calculator</title>
 <style>
     body {
         font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f5f5f5;
     }
-    form {
-        max-width: 500px;
-        margin: 20px auto;
+    .calculator {
+        border: 1px solid #ccc;
         padding: 20px;
+        border-radius: 5px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        width: 300px;
+    }
+    .calculator input {
+        width: calc(100% - 10px);
+        margin-bottom: 10px;
+        padding: 10px;
+        font-size: 18px;
         border: 1px solid #ccc;
         border-radius: 5px;
-        background-color: #f9f9f9;
     }
-    form input[type="text"], form input[type="email"], form input[type="number"], form select {
-        width: 100%;
-        padding: 10px;
-        margin: 5px 0;
-        box-sizing: border-box;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-    }
-    form input[type="radio"] {
+    .calculator button {
+        width: 70px;
+        height: 50px;
         margin: 5px;
-    }
-    form input[type="submit"] {
-        background-color: #4CAF50;
-        color: white;
-        padding: 12px 20px;
-        border: none;
-        border-radius: 4px;
+        font-size: 18px;
         cursor: pointer;
-        float: right;
+        border: 1px solid #007bff;
+        border-radius: 5px;
+        background-color: #007bff;
+        color: #fff;
     }
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 20px;
-    }
-    table, th, td {
-        border: 1px solid #ddd;
-        padding: 8px;
-        text-align: left;
-    }
-    th {
-        background-color: #4CAF50;
-        color: white;
+    .calculator button:hover {
+        background-color: #0056b3;
     }
 </style>
 </head>
 <body>
+    <div class="calculator" id="calculator">
+        <input type="text" id="display" readonly>
+        <div>
+            <button onclick="addToDisplay('1')">1</button>
+            <button onclick="addToDisplay('2')">2</button>
+            <button onclick="addToDisplay('3')">3</button>
+            <button onclick="addToDisplay('4')">4</button>
+            <button onclick="addToDisplay('5')">5</button>
+            <button onclick="addToDisplay('6')">6</button>
+            <button onclick="addToDisplay('7')">7</button>
+            <button onclick="addToDisplay('8')">8</button>
+            <button onclick="addToDisplay('9')">9</button>
+           
+        </div>
+        <div>
+            <button onclick="performOperation('+')">+</button>
+            <button onclick="performOperation('-')">-</button>
+            <button onclick="performOperation('*')">*</button>
+            <button onclick="addToDisplay('0')">0</button>
+            <button onclick="performOperation('/')">/</button>
+            <button onclick="performOperation('%')">%</button>
+            <button onclick="clearDisplay()">C</button>
+        </div>
 
-<form id="myForm">
-    <label for="firstname">First Name:</label>
-    <input type="text" id="firstname" name="firstname" required><br><br>
-  
-    <label for="lastname">Last Name:</label>
-    <input type="text" id="lastname" name="lastname" required><br><br>
+        <div>
+            <button onclick="calculate()">=</button>
+        </div>
+    </div>
 
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br><br>
-
-    <label for="address">Address:</label>
-    <input type="text" id="address" name="address" required><br><br>
-
-    <label for="pincode">Pincode:</label>
-    <input type="number" id="pincode" name="pincode" required><br><br>
-
-    <label for="gender">Gender:</label>
-    <select id="gender" name="gender" required>
-        <option value="">Select Gender</option>
-        <option value="male">Male</option>
-        <option value="female">Female</option>
-        <option value="other">Other</option>
-    </select><br><br>
-
-    <input type="submit" value="Submit">
-</form>
-
-<table id="dataTable">
-    <thead>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th>Address</th>
-            <th>Pincode</th>
-            <th>Gender</th>
-        </tr>
-    </thead>
-    <tbody>
-        <!-- Table body will be populated by JavaScript -->
-    </tbody>
-</table>
-
-<script>
-document.getElementById('myForm').addEventListener('submit', function(event) {
-    event.preventDefault(); // Prevent the default form submission
-
-    // Get form values
-    var firstname = document.getElementById('firstname').value;
-    var lastname = document.getElementById('lastname').value;
-    var email = document.getElementById('email').value;
-    var address = document.getElementById('address').value;
-    var pincode = document.getElementById('pincode').value;
-    var gender = document.getElementById('gender').value;
-
-    // Create a new row in the table
-    var table = document.getElementById('dataTable').getElementsByTagName('tbody')[0];
-    var newRow = table.insertRow();
-    var cell1 = newRow.insertCell(0);
-    var cell2 = newRow.insertCell(1);
-    var cell3 = newRow.insertCell(2);
-    var cell4 = newRow.insertCell(3);
-    var cell5 = newRow.insertCell(4);
-    var cell6 = newRow.insertCell(5);
-
-    // Append values to the cells
-    cell1.textContent = firstname;
-    cell2.textContent = lastname;
-    cell3.textContent = email;
-    cell4.textContent = address;
-    cell5.textContent = pincode;
-    cell6.textContent = gender;
-
-    // Clear the form fields
-    document.getElementById('myForm').reset();
-});
-</script>
-
+    <script src="calculator.js"></script>
 </body>
 </html>
